RESOLVED FIXED78090
Web Inspector: [CRASH] InspectorDOMAgent::updateTouchEventEmulationInPage()
https://bugs.webkit.org/show_bug.cgi?id=78090
Summary Web Inspector: [CRASH] InspectorDOMAgent::updateTouchEventEmulationInPage()
Alexander Pavlov (apavlov)
Reported 2012-02-08 01:44:28 PST
Stacktrace: 0x761ac8da [Google Chrome Framework - ../page/Settings.h:530] WebCore::InspectorDOMAgent::updateTouchEventEmulationInPage 0x761ac666 [Google Chrome Framework - InspectorDOMAgent.cpp:222 WebCore::InspectorDOMAgent::clearFrontend 0x761ab419 [Google Chrome Framework - InspectorController.cpp:240 WebCore::InspectorController::disconnectFrontend 0x761ab36f [Google Chrome Framework - InspectorController.cpp:178 WebCore::InspectorController::inspectedPageDestroyed 0x7627ce94 [Google Chrome Framework - Page.cpp:223 WebCore::Page::~Page Upstreaming http://code.google.com/p/chromium/issues/detail?id=113025
Attachments
Patch (1.49 KB, patch)
2012-02-08 01:53 PST, Alexander Pavlov (apavlov)
vsevik: review+
Alexander Pavlov (apavlov)
Comment 1 2012-02-08 01:53:00 PST
Alexander Pavlov (apavlov)
Comment 2 2012-02-08 02:11:51 PST
Note You need to log in before you can comment on or make changes to this bug.