Web Inspector: [CRASH] InspectorDOMAgent::updateTouchEventEmulationInPage() https://bugs.webkit.org/show_bug.cgi?id=78090

Reviewed by Vsevolod Vlasov.

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::updateTouchEventEmulationInPage):

Canonical link: https://commits.webkit.org/94968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107056 268f45cc-cd09-0410-ab3c-d52691b4dbfc